<resources>
    <string name="app_name">Sembako</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cashier">Cashier</string>
    <string name="features">Features</string>
    <string name="refresh">Refresh</string>
    <string name="no_item">No Item</string>
    <string name="flash_light_off">Flash Light OFF</string>
    <string name="auto_focus_on">Auto Focus ON</string>
    <string name="flash_light_on">Flash Light ON</string>
    <string name="auto_focus_off">Auto Focus OFF</string>
    <string name="scanner">Scanner</string>
    <string name="barcode">Barcode</string>
    <string name="title_product">Title Product</string>
    <string name="price">Price</string>
    <string name="stock">Stock</string>
    <string name="create">Create</string>
</resources>
