<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:checked="true"
            android:icon="@drawable/house"/>

    </group>

    <item
        android:title="@string/features">

        <menu>

            <item
                android:id="@+id/nav_cashier"
                android:title="@string/cashier"
                android:icon="@drawable/cashier"/>
            <item
                android:id="@+id/nav_setting"
                android:title="@string/setting"
                android:icon="@drawable/settings"/>

        </menu>

    </item>
</menu>